syntax = "proto3";
package ollo.oracle.v1;

import "gogoproto/gogo.proto";

option go_package = "ollo/x/oracle/types";

message GenesisState {
  // MsgModuleOwner is an array containing the chainlink init module owner accounts.
  repeated MsgModuleOwner moduleOwners = 1;
}

message MsgModuleOwner {
  // address defines the address of the module owner
  bytes address = 1 [
    (gogoproto.moretags) = "yaml:\"address\"",
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"
  ];
  // pubKey defined the public key of the module owner
  bytes pubKey = 2 [
    (gogoproto.moretags) = "yaml:\"pub_key\""
  ];
  // the module owner who assigned this new module owner
  bytes assignerAddress = 3 [
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress",
    (gogoproto.nullable) = true
  ];
}
