syntax = "proto3";
package ollo.incentive.v1;

import "cosmos_proto/cosmos.proto";
import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/ollo-station/ollo/x/incentive/types";
option (gogoproto.goproto_getters_all) = false;

message EventNewReward {
  string delegator_address = 1;
  string validator_address = 2;
  cosmos.base.v1beta1.DecCoin reward = 3 [(gogoproto.nullable) = false];
}


